# marzpyb

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  PyArgParser.hxx  PyArguments.hxx  README.md  benchmark.ods  main.cpp  marzpyb.code-workspace  pixi.toml  run_benchmark.sh
benchmark/: compile_benchmark.cpp  compile_benchmark.inc.cpp  compile_benchmark10.cpp  compile_benchmark2.cpp  compile_benchmark3.cpp  compile_benchmark4.cpp  compile_benchmark5.cpp  compile_benchmark6.cpp  compile_benchmark7.cpp  compile_benchmark8.cpp  compile_benchmark9.cpp
benchmark2/: compile_benchmark.cpp  compile_benchmark.inc.cpp  compile_benchmark10.cpp  compile_benchmark2.cpp  compile_benchmark3.cpp  compile_benchmark4.cpp  compile_benchmark5.cpp  compile_benchmark6.cpp  compile_benchmark7.cpp  compile_benchmark8.cpp  compile_benchmark9.cpp
tests/: README.md  test_pyargparser.cpp  test_pyarguments.cpp  test_pycxx_arguments.cpp
